syntax = "proto3";

package mrnet.v1;
option go_package = "/authentication;authenticationpb";

service LoginService {
    rpc LoginWithCredentials (UserLoginDetails) returns (LoginResponse);
    rpc LoginWithToken (JWTToken) returns (LoginResponse);
}

service SignupService {
    rpc Signup (UserSignupDetails) returns (LoginResponse);
}

service ModificationService {
    rpc ChangePasswd (PasswdResetRequest) returns (ModificationSuccess);
    rpc ChangeUserId (UserIdPasswd) returns (ModificationSuccess);
}

message UserLoginDetails {
    string emailOrId = 1;
    string passwdHash = 2;
}

message LoginResponse {
    bool loginSuccess = 1;
    string jwtToken = 2;
    string error = 3;
}

message JWTToken {
    string jwtToken = 1;
}

message UserSignupDetails {
    string email = 1;
    string id = 2;
    string passwdHash = 3;
}

message PasswdResetRequest {
    string email = 1;
    string secretHash = 2;
}

message UserIdPasswd {
    string email = 1;
    string passwdHash = 2;
}

message ModificationSuccess {
    bool success = 1;
    string error = 2;
}